--- a/indexCentroMedico.html
+++ b/indexCentroMedico.html
@@ -7,20 +7,20 @@
     <title>Centro Medico</title>
     <meta name="keywords" content="centro medico, medicos, doctores, consultorio, pacientes">
     <meta name="description" content="Pagina principal del centro medico">
-    <link rel="stylesheet" href="/CSS/indexCentroMedico.css">
-    <link rel="icon"  type="image/x-icon" href="imagenes/centroMedico.png">
-    <script src="Proyecto-CentroMedico-main/JS/medicos.js"></script>
-    <script src="Proyecto-CentroMedico-main/JS/pacientes.js"></script>
+    <link rel="stylesheet" href="indexCentroMedico.css">
+    <link rel="icon"  type="image/x-icon" href="centroMedico.png">
+    <script src="medicos.js"></script>
+    <script src="pacientes.js"></script>
 </head>
 <body>
     <header>
         <ul>
-            <li><a href="/HTML/listadoPacientes.html" target="_blank"><strong>Listado Pacientes</strong></a></li>
-            <li><a href="/HTML/listadoMedicos.html" target="_blank"><strong>Listado Medicos</strong></a></li>
-            <li><a href="/HTML/pacientes.html" target="_blank"><strong>Registro Pacientes</strong></a></li>
-            <li><a href="/HTML/doctores.html" target="_blank"><strong>Registro Medicos</strong></a></li>
+            <li><a href="listadoPacientes.html" target="_blank"><strong>Listado Pacientes</strong></a></li>
+            <li><a href="listadoMedicos.html" target="_blank"><strong>Listado Medicos</strong></a></li>
+            <li><a href="pacientes.html" target="_blank"><strong>Registro Pacientes</strong></a></li>
+            <li><a href="doctores.html" target="_blank"><strong>Registro Medicos</strong></a></li>
         </ul>
-        <img class="logo" src="imagenes/centroMedico.png">
+        <img class="logo" src="centroMedico.png">
     </header>
     <br><br><br><br><br>
     <main class="cuerpo">
