--- a/listadoMedicos.html
+++ b/listadoMedicos.html
@@ -7,8 +7,8 @@
     <title>Listado Medicos</title>
     <meta name="keywords" content="centro medico, medicos, doctores, listado">
     <meta name="description" content="Listado medicos que laboran en el centro medico">
-    <link rel="stylesheet" href="/CSS/listadoMedicos.css">
-    <link rel="icon"  type="image/x-icon" href="/Imagenes/centroMedico.png">
+    <link rel="stylesheet" href="listadoMedicos.css">
+    <link rel="icon"  type="image/x-icon" href="centroMedico.png">
 </head>
 <body>
     <header>
@@ -31,8 +31,8 @@
 
             </tbody>
         </table>
-        <buttom class="volver"><a href="/indexCentroMedico.html" target="_blank"><img src="/Imagenes/volver.png"></a></buttom>
+        <buttom class="volver"><a href="indexCentroMedico.html" target="_blank"><img src="volver.png"></a></buttom>
     </main>
-    <script src="/JS/medicos.js"></script>
+    <script src="medicos.js"></script>
 </body>
 </html>
