--- a/pacientes.html
+++ b/pacientes.html
@@ -7,8 +7,8 @@
     <title>Registro Pacientes</title>
     <meta name="keywords" content="centro medico, prioritarios, atención medica, pacientes">
     <meta name="description" content="Formulario de registro pacientes donde se almacenaran los datos de los pacientes del centro medico Back-End">
-    <link rel="stylesheet" href="/CSS/pacientes.css">
-    <link rel="icon"  type="image/x-icon" href="/Imagenes/centroMedico.png">
+    <link rel="stylesheet" href="pacientes.css">
+    <link rel="icon"  type="image/x-icon" href="centroMedico.png">
 </head>
 <body>
     <header>
@@ -43,7 +43,7 @@
             <input type="submit" id="button" value="Enviar Información">
         </form>
     </main>
-    <buttom class="volver"><a href="/indexCentroMedico.html" target="_blank"><img src="/Imagenes/volver.png"></a></buttom>
-    <script src="/JS/registroPacientes.js"></script>
+    <buttom class="volver"><a href="indexCentroMedico.html" target="_blank"><img src="volver.png"></a></buttom>
+    <script src="registroPacientes.js"></script>
 </body>
 </html>
