--- a/doctores.html
+++ b/doctores.html
@@ -7,8 +7,8 @@
     <title>Registro Medicos</title>
     <meta name="keywords" content="centro medico, medicos, doctores, consultorio">
     <meta name="description" content="Formulario de registro medicos donde se almacenaran los datos de los medicos del centro medico Back-End">
-    <link rel="stylesheet" href="/CSS/doctores.css">
-    <link rel="icon"  type="image/x-icon" href="/Imagenes/centroMedico.png">
+    <link rel="stylesheet" href="doctores.css">
+    <link rel="icon"  type="image/x-icon" href="centroMedico.png">
 </head>
 <body>
     <header>
@@ -43,7 +43,7 @@
             <input type="submit" id="button" value="Enviar Información">
         </form>
     </main>
-    <buttom class="volver"><a href="/indexCentroMedico.html" target="_blank"><img src="/Imagenes/volver.png"></a></buttom>
-    <script src="/JS/registroMedico.js"></script>
+    <buttom class="volver"><a href="indexCentroMedico.html" target="_blank"><img src="volver.png"></a></buttom>
+    <script src="registroMedico.js"></script>
 </body>
 </html>
