--- a/listadoPacientes.html
+++ b/listadoPacientes.html
@@ -7,8 +7,8 @@
     <title>Listado Pacientes</title>
     <meta name="keywords" content="centro medico, medicos, pacientes, listado">
     <meta name="description" content="Listado pacientes que se atienden en el centro medico">
-    <link rel="stylesheet" href="/CSS/listadoPacientes.css">
-    <link rel="icon"  type="image/x-icon" href="/Imagenes/centroMedico.png">
+    <link rel="stylesheet" href="listadoPacientes.css">
+    <link rel="icon"  type="image/x-icon" href="centroMedico.png">
 </head>
 <body>
     <header>
@@ -31,8 +31,8 @@
 
             </tbody>
         </table>
-        <buttom class="volver"><a href="/indexCentroMedico.html" target="_blank"><img src="/Imagenes/volver.png"></a></buttom> 
+        <buttom class="volver"><a href="indexCentroMedico.html" target="_blank"><img src="volver.png"></a></buttom> 
     </main>
-    <script src="/JS/pacientes.js"></script>
+    <script src="pacientes.js"></script>
 </body>
 </html>
