--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Centro Medico</title>
     <meta name="keywords" content="centro medico, medicos, doctores, consultorio, pacientes">
     <meta name="description" content="Pagina principal del centro medico">
-    <link rel="stylesheet" href="indexCentroMedico.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="icon"  type="image/x-icon" href="centroMedico.png">
     <script src="medicos.js"></script>
     <script src="pacientes.js"></script>
