--- a/listadoMedicos.html
+++ b/listadoMedicos.html
@@ -31,7 +31,7 @@
 
             </tbody>
         </table>
-        <buttom class="volver"><a href="indexCentroMedico.html" target="_blank"><img src="volver.png"></a></buttom>
+        <buttom class="volver"><a href="index.html" target="_blank"><img src="volver.png"></a></buttom>
     </main>
     <script src="medicos.js"></script>
 </body>
