--- a/doctores.html
+++ b/doctores.html
@@ -43,7 +43,7 @@
             <input type="submit" id="button" value="Enviar Información">
         </form>
     </main>
-    <buttom class="volver"><a href="indexCentroMedico.html" target="_blank"><img src="volver.png"></a></buttom>
+    <buttom class="volver"><a href="index.html" target="_blank"><img src="volver.png"></a></buttom>
     <script src="registroMedico.js"></script>
 </body>
 </html>
